# LifeFlow-Management-System

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  README.md  asistent.cpp  asistent.h  consultatie.cpp  consultatie.h  imgui.ini  interventie.cpp  interventie.h  main.cpp  medic.cpp  medic.h  meniuSpital.cpp  meniuSpital.h  observer.h  pacient.cpp  pacient.h  personalFactory.h  personalSpital.h  repository.h  reteta.h  rezident.cpp  rezident.h  sectie.cpp  sectie.h  spital.cpp  spital.h  spitalul_meu.db
